data/derived/fa15/progs/unify/prog1536.ml.out
Characters 59-71:
  | x:: xs -> x + sumList (xs);;
                  ^^^^^^^^^^^^
Error: This expression has type int list -> int
       but an expression was expected of type int
